--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: PyQtPass-Windows
+        name: QtPass-Windows
         path: release
 
   build-mac:
@@ -55,6 +55,6 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: PyQtPass-macOS
+        name: QtPass-macOS
         path: main/QtPass.dmg
 
