--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
         nmake
         copy README.md src\release\README.txt
         copy LICENSE src\release\LICENSE.txt
+    - name: Let's see
+      run: find $Qt5_DIR
     - name: Install Inno Setup
       run: choco install innosetup
     - name: Create Installer with Inno Setup
